# anki-simple-leaderboard

./: .gitignore  __init__.py  back.py  build.sh  config.json  pyproject.toml  stats.py  utils.py
backend/: main.py
backend/templates/: create_team.html
